--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/modal.css">
     <link rel="stylesheet" href="style/components.css">
-    <link rel="icon" href="assets/icon.png">
+    <link rel="icon" href="assets/icons/museu.png">
 
     <!-- Pictogrammers -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.2.96/css/materialdesignicons.min.css">
@@ -27,7 +27,7 @@
     <script src="scripts/relatorios.js"></script>
     <script src="scripts/NF_txt_maker.js"></script>
         
-    <title>Siflex 3.0</title>
+    <title>Museu 1.0</title>
 </head>
 <body>
     <div id="main-screen"></div>
