--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <script src="scripts/relatorios.js"></script>
     <script src="scripts/NF_txt_maker.js"></script>
         
-    <title>Museu 1.0</title>
+    <title>Acervo 1.0</title>
 </head>
 <body>
     <div id="main-screen"></div>
